--- a/dockerhub/Dockerfile.j2
+++ b/dockerhub/Dockerfile.j2
@@ -1,5 +1,9 @@
 FROM {{ docker_image_base }}
 
+RUN rm -rf /var/lib/apt/lists/* && apt-get update \
+    && apt-get install -y sudo systemd init systemd-sysv \
+    && apt-get autoremove -y && apt-get clean
+    
 RUN mkdir -p /usr/share/man/man1
 
 RUN if [ $(command -v apt-get) ]; then apt-get update && apt-get upgrade -y && apt-get install -y python3 sudo bash ca-certificates && apt-get clean; \
